Updates Made in this commit: .) MyJDBC.java Refactored & Incorporated HiKari .) DB Updates
Next To Do:
.)

Previous Updates:
.)

Errors
.)