@@ -8,7 +8,9 @@ import App_Code.Objects.Screens.Meal_Plan_Screen;
 import javax.swing.*;
 import java.awt.*;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.util.ArrayList;
+import java.util.Arrays;
 
 public class Macros_Targets_Screen extends Screen_JFrame
 {
@@ -23,12 +25,17 @@ public class Macros_Targets_Screen extends Screen_JFrame
     private JButton submitButton;
     
     private ArrayList<JTextField> listOfTextFields = new ArrayList<>();
-    private static final String[] labels = { "Selected Plan Name:", "Current Weight (KG):", "Body Fat Percentage (%):",
-            "Protein Per Pound Target", "Carbohydrates Per Pound Target:", "Fibre Target (G):", "Fats Per Pound Target:",
-            "Saturated Fat Limit:", "Salt Limit (G):", "Water Target (Ml):", "Liquid Target (Ml)", "Additional Calories:" };
+    private static final String[] labels = { "Selected Plan Name", "Creation Date", "Current Weight (KG)", "Body Fat Percentage (%)",
+            "Protein Per Pound Target", "Carbohydrates Per Pound Target", "Fibre Target (G)", "Fats Per Pound Target",
+            "Saturated Fat Limit", "Salt Limit (G)", "Water Target (Ml)", "Liquid Target (Ml)", "Additional Calories" };
     
-    private ArrayList<String> macrosData;
+    private ArrayList<String>
+            macrosData,
+            not_Editable_Columns = new ArrayList<>(Arrays.asList("Selected Plan Name", "Creation Date"));
+    
+    
     private String tableName = "macros_per_pound_and_limits";
+    private String creation_Date;
     
     // ################################################################################################################
     // Constructor
@@ -41,6 +48,7 @@ public class Macros_Targets_Screen extends Screen_JFrame
         super(db, false, "Macro-Nutrients Screen", 650, 550, 0, 0);
         getScrollPaneJPanel().setBackground(Color.WHITE);
         set_Resizable(true);
+        
         
         // ##########################################
         // Variables
@@ -60,22 +68,17 @@ public class Macros_Targets_Screen extends Screen_JFrame
         //##############################################################################################################
         // Get DB Target Info for this Plan
         //##############################################################################################################
-        String query = String.format("""
-                SELECT                                
-                plan_id, current_weight_kg, body_fat_percentage, protein_per_pound, carbohydrates_per_pound, fibre, 
-                fats_per_pound, saturated_fat_limit, salt_limit, water_target, liquid_target, additional_calories                                
-                FROM %s                                
-                WHERE plan_id = %s;""", tableName, temp_PlanID);
+        String query = String.format("SELECT * FROM %s WHERE plan_id = %s;", tableName, temp_PlanID);
         
-        ArrayList<ArrayList<String>> data = db.get_Multi_Column_Query(query);
-        
+        ArrayList<ArrayList<String>> data = db.get_Multi_Column_Query(query, "Unable to retrieve this plans Macro Targets");
+       
         if (data == null)
         {
             JOptionPane.showMessageDialog(meal_plan_screen.getFrame(), "\n\nUnable to retrieve current plan Macros Data!");
             return;
         }
         
-        macrosData = data.get(0);
+        macrosData = data.getFirst();
         
         //##############################################################################################################
         // GUI Set-Up
@@ -108,7 +111,7 @@ public class Macros_Targets_Screen extends Screen_JFrame
             //################################
             String labelTXT = labels[i];
             
-            JLabel label = new JLabel("    " + labelTXT);
+            JLabel label = new JLabel(String.format("    %s:", labelTXT));
             label.setHorizontalAlignment(JLabel.LEFT);
             label.setFont(new Font("Verdana", Font.BOLD, 14));
             inputArea.add(label);
@@ -117,18 +120,26 @@ public class Macros_Targets_Screen extends Screen_JFrame
             // JTextField
             //################################
             JTextField textField = new JTextField("");
+            String cellData = macrosData.get(i);
             
             //Setting TextField limits
-            if (labelTXT.equals("Selected Plan Name:"))
+            if (labelTXT.equals("Selected Plan Name"))
             {
                 textField.setDocument(new JTextFieldLimit(100));
                 textField.setText(String.format(" %s", planName));
-                textField.setEditable(false);
             }
             else
             {
-                textField.setDocument(new JTextFieldLimit(9));
-                textField.setText(String.format(" %s", macrosData.get(i)));
+                if (labelTXT.equals("Creation Date"))
+                {
+                    textField.setDocument(new JTextFieldLimit(30));
+                    creation_Date = cellData;
+                }
+                else
+                {
+                    textField.setDocument(new JTextFieldLimit(9));
+                }
+                textField.setText(String.format(" %s", cellData));
             }
             
             textField.setEditable(false);
@@ -168,7 +179,7 @@ public class Macros_Targets_Screen extends Screen_JFrame
         meal_plan_screen.remove_macrosTargets_Screen();
         closeJFrame(); // Destroy Window
     }
-
+    
     // ###########################################################
     // Form Methods
     // ##########################################################
@@ -194,7 +205,7 @@ public class Macros_Targets_Screen extends Screen_JFrame
             {
                 JTextField jTextField = listOfTextFields.get(pos);
                 
-                if ((labels[pos].equals("Selected Plan Name:"))) { continue; }
+                if (not_Editable_Columns.contains((labels[pos]))) { continue; }
                 
                 jTextField.setEditable(true);
             }
@@ -208,7 +219,7 @@ public class Macros_Targets_Screen extends Screen_JFrame
         //#######################################
         // Validate / Update Form
         //#######################################
-        listOfTextFields.get(1).requestFocusInWindow(); // Moving Cursor To Jtextfield(1) makes form look editable
+        listOfTextFields.get(2).requestFocusInWindow(); // Moving Cursor To Jtextfield(1) makes form look editable
         
         if (! validateForm()) { return; } // Error
         
@@ -237,12 +248,12 @@ public class Macros_Targets_Screen extends Screen_JFrame
         
         for (int row = 0; row < listOfTextFields.size(); row++)
         {
-            if (row == 0) { continue; } // IF row = PlanName skip processing
-            
             String value = listOfTextFields.get(row).getText().trim();  // Gather User Input In TextField
             String labelName = labels[row];
             
-            if (value.equals("")) // If the users input was empty
+            if (not_Editable_Columns.contains(labelName)) { continue; } // IF row = PlanName skip processing
+            
+            if (value.isEmpty()) // If the users input was empty
             {
                 errorTxt += String.format("\n\n' %s ' on Row: %s,  must have a value which is not ' NULL '!", labelName, row + 1);
                 continue;
@@ -256,7 +267,7 @@ public class Macros_Targets_Screen extends Screen_JFrame
                 
                 if (bd_User_Input.compareTo(zero) < 0 || bd_User_Input.compareTo(zero) == 0) // decimal less than 0
                 {
-                    if (bd_User_Input.compareTo(zero) == 0 && labelName.equals("Additional Calories:") || labelName.equals("Liquid Target (Ml)"))
+                    if (bd_User_Input.compareTo(zero) == 0 && labelName.equals("Additional Calories") || labelName.equals("Liquid Target (Ml)"))
                     {
                         continue;
                     }
@@ -284,15 +295,14 @@ public class Macros_Targets_Screen extends Screen_JFrame
         // ##############################################
         // No Error: Exit
         // ##############################################
-        if (errorTxt.length() == 0) { System.out.printf("\n\nNo Error"); return true; }
+        if (errorTxt.isEmpty()) { System.out.printf("\n\nNo Error"); return true; }
         
         // ##############################################
         // Error Found:  MSG OUTPUT
         // ##############################################
         String txt = String.format("""
                 \n\nAll the input rows must have a value which is a ' Decimal(8,2) ' !" +
-                                
-                                
+                
                 Please fix the following rows being; \n%s""", errorTxt);
         
         JOptionPane.showMessageDialog(meal_plan_screen.getFrame(), txt);
@@ -302,34 +312,92 @@ public class Macros_Targets_Screen extends Screen_JFrame
     public boolean updateForm()
     {
         // ##############################################
-        // SQL Update MSG
+        // Variables
         // ##############################################
-        String updateTargets_Query = String.format("""
-                        UPDATE macros_per_pound_and_limits
-                        SET 
-                        date_time_of_creation = now(), current_weight_kg = %s , body_fat_percentage = %s, protein_per_pound = %s, 
-                        carbohydrates_per_pound = %s, fibre =%s, fats_per_pound = %s, saturated_fat_limit = %s,  salt_limit = %s, 
-                        water_target = %s, liquid_target = %s, additional_calories = %s 
-                        WHERE plan_id = %s;""",
-                
-                listOfTextFields.get(1).getText().trim(), listOfTextFields.get(2).getText().trim(), listOfTextFields.get(3).getText().trim(),
-                listOfTextFields.get(4).getText().trim(), listOfTextFields.get(5).getText().trim(), listOfTextFields.get(6).getText().trim(),
-                listOfTextFields.get(7).getText().trim(), listOfTextFields.get(8).getText().trim(), listOfTextFields.get(9).getText().trim(),
-                listOfTextFields.get(10).getText().trim(), listOfTextFields.get(11).getText().trim(), temp_PlanID);
+        BigDecimal weightKG = new BigDecimal(listOfTextFields.get(2).getText().trim());
+        BigDecimal weightInPounds = weightKG.multiply(new BigDecimal("2.2")).setScale(2, RoundingMode.HALF_UP);
         
-        System.out.printf("\n\nQuery: \n\n%s", updateTargets_Query);
+        // ##############################################
+        // Create SQL Query
+        // ##############################################
+        Object[] options = { "Update Existing Macro", "Create New Macro Target", "Cancel" };
+        
+        String update_Query = "";
+        
+        int choice = JOptionPane.showOptionDialog(
+                null, // parent component (null = center of screen)
+                "How would you like to change your Macro Targets?",
+                "Confirm Action",
+                JOptionPane.YES_NO_CANCEL_OPTION,
+                JOptionPane.QUESTION_MESSAGE,
+                null, // icon
+                options, // custom button texts
+                options[0] // default option
+        );
+        
+        if (choice == 0)// "Update Existing Macro"
+        {
+            update_Query = String.format("""
+                            UPDATE macros_per_pound_and_limits
+                            SET
+                            date_time_of_creation = now(),
+                            current_weight_kg = %s, current_weight_in_pounds = %s,
+                            body_fat_percentage = %s, protein_per_pound = %s,
+                            carbohydrates_per_pound = %s, fibre =%s, fats_per_pound = %s,
+                            saturated_fat_limit = %s, salt_limit = %s,water_target = %s,
+                            liquid_target = %s, additional_calories = %s
+                            WHERE plan_id = %s AND date_time_of_creation = %s;""",
+                    weightKG,
+                    weightInPounds,
+                    listOfTextFields.get(3).getText().trim(), listOfTextFields.get(4).getText().trim(),
+                    listOfTextFields.get(5).getText().trim(), listOfTextFields.get(6).getText().trim(),
+                    listOfTextFields.get(7).getText().trim(), listOfTextFields.get(8).getText().trim(),
+                    listOfTextFields.get(9).getText().trim(), listOfTextFields.get(10).getText().trim(),
+                    listOfTextFields.get(11).getText().trim(), listOfTextFields.get(12).getText().trim(),
+                    temp_PlanID, creation_Date);
+        }
+        else if (choice == 1)// "Replace Existing Macro"
+        {
+            update_Query = String.format("""
+                            INSERT INTO macros_per_pound_and_limits
+                            (
+                            	plan_id , date_time_of_creation,
+                            	current_weight_kg, current_weight_in_pounds,
+                            	body_fat_percentage, protein_per_pound, carbohydrates_per_pound, fibre,
+                            	fats_per_pound, saturated_fat_limit, salt_limit, water_target, liquid_target,
+                            	additional_calories
+                            )
+                            VALUES
+                            (%s, now(), %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s);""",
+                    planID,
+                    weightKG, weightInPounds,
+                    listOfTextFields.get(3).getText().trim(), listOfTextFields.get(4).getText().trim(),
+                    listOfTextFields.get(5).getText().trim(), listOfTextFields.get(6).getText().trim(),
+                    listOfTextFields.get(7).getText().trim(), listOfTextFields.get(8).getText().trim(),
+                    listOfTextFields.get(9).getText().trim(), listOfTextFields.get(10).getText().trim(),
+                    listOfTextFields.get(11).getText().trim(), listOfTextFields.get(12).getText().trim());
+        }
+        else
+        {
+            return false;
+        }
+        
+        System.out.printf("\n\nQuery: \n\n%s", update_Query);
         
         // ##############################################
         // Execute Query
         // ##############################################
-        if (! (db.upload_Data_Batch_Altogether(new String[]{ updateTargets_Query })))
-        {
-            JOptionPane.showMessageDialog(meal_plan_screen.getFrame(), "Un-able to Update Macro Targets In DB");
-            return false;
-        }
+        if (! (db.upload_Data(update_Query, false, "Error, changing Macro Targets!"))) { return false; }
         
+        // ##############################################
+        // Output MSG & Update Screens
+        // ##############################################
         JOptionPane.showMessageDialog(meal_plan_screen.getFrame(), "Macro Targets Successfully Updated In DB");
         meal_plan_screen.update_Targets_And_MacrosLeftTables();
+        
+        // ##############################################
+        // Return Result
+        // ##############################################
         return true;
     }
     
